git-svn-id: http://svn.vdombox.ru/flextools/trunk@6228 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
@@ -16,10 +16,15 @@
 		@namespace controls "net.vdombox.ide.modules.wysiwyg.view.components.controls.*";
 		@namespace mx "library://ns.adobe.com/flex/mx";
 		
-		/* components|Item
+		components|ObjectRenderer
 		{
-			skinClass : ClassReference("net.vdombox.ide.modules.wysiwyg.view.skins.ItemSkin"); 
-		} */
+			skinClass : ClassReference("net.vdombox.ide.modules.wysiwyg.view.skins.ObjectRendererSkin"); 
+		} 
+		
+		components|PageRenderer
+		{
+			skinClass : ClassReference("net.vdombox.ide.modules.wysiwyg.view.skins.PageRendererSkin"); 
+		}
 		
 		/* controls|ToolbarButton
 		{
