--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/PageEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/PageEditor.mxml
@@ -14,6 +14,7 @@
 			import net.vdombox.ide.common.interfaces.IVDOMObjectVO;
 			import net.vdombox.ide.modules.wysiwyg.events.EditorEvent;
 			import net.vdombox.ide.modules.wysiwyg.events.RendererEvent;
+			import net.vdombox.ide.modules.wysiwyg.events.TransformMarkerEvent;
 			import net.vdombox.ide.modules.wysiwyg.interfaces.IEditor;
 			import net.vdombox.ide.modules.wysiwyg.interfaces.IRenderer;
 			import net.vdombox.ide.modules.wysiwyg.model.vo.RenderVO;
@@ -97,13 +98,14 @@
 
 				addEventListener( RendererEvent.CREATED, renderer_createdHandler, true, 0, true );
 				addEventListener( RendererEvent.REMOVED, renderer_removedHandler, true, 0, true );
+				addEventListener( TransformMarkerEvent.TRANSFORM_COMPLETE, transformMarker_tansformCompleteHandler, true, 0, true );
 			}
 
 			private function removeHandlers() : void
 			{
 				removeEventListener( Event.REMOVED_FROM_STAGE, removedFromStageHandler );
 
-				if( skin )
+				if ( skin )
 					skin.removeEventListener( StateChangeEvent.CURRENT_STATE_CHANGE, changeStateHandler );
 
 				removeEventListener( RendererEvent.CREATED, renderer_createdHandler, true );
@@ -149,7 +151,7 @@
 				removeEventListener( FlexEvent.CREATION_COMPLETE, creationCompleteHandler );
 
 				skin.addEventListener( StateChangeEvent.CURRENT_STATE_CHANGE, changeStateHandler, false, 0, true );
-				
+
 				dispatchEvent( new EditorEvent( EditorEvent.CREATED ) );
 
 				dispatchStateEvent();
@@ -175,6 +177,11 @@
 			{
 				removeRenderer( event.target as IRenderer );
 			}
+
+			private function transformMarker_tansformCompleteHandler( event : TransformMarkerEvent ) : void
+			{
+				event.stopImmediatePropagation();
+			}
 		]]>
 	</fx:Script>
 
@@ -191,18 +198,16 @@
 		<s:VerticalLayout/>
 	</s:layout>
 
-	<s:Scroller id="scroller"
-				height="100%" width="100%">
-		<s:Group>
-			<components:PageRenderer id="renderer"
-									 height="100%" width="100%"
-									 selectedRenderer="{ selectedRenderer }" includeIn="wysiwyg, wysiwygDisabled, normal, disabled"/>
+	<s:Group height="100%" width="100%">
+		<components:PageRenderer id="renderer"
+								 height="100%" width="100%"
+								 selectedRenderer="{ selectedRenderer }" includeIn="wysiwyg, wysiwygDisabled, normal, disabled"/>
 
-			<editors:XMLScriptEditor id="xmlScriptEditor"
-									 height="100%" width="100%"
-									 includeIn="xml, xmlDisabled"/>
-		</s:Group>
-	</s:Scroller>
+		<editors:XMLScriptEditor id="xmlScriptEditor"
+								 height="100%" width="100%"
+								 includeIn="xml, xmlDisabled"/>
+
+	</s:Group>
 
 	<components:ToolbarPanel id="toolbarPanel"
 							 includeInLayout="false" width="100%"
