--- a/IDE/v.02/common/src/net/vdombox/skins/TabBarButtonSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/skins/TabBarButtonSkin.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 minHeight="21" minWidth="21"
+			 minHeight="21" minWidth="100"
 			 alpha.disabledStates="0.5">
 
 	<!-- host component -->
@@ -58,7 +58,7 @@
 	<!--- Defines the appearance of the label(s) for the middle button(s) in the ButtonBar component. -->
 
 	<s:Label id="labelDisplay"
-			 bottom="2" color="#686868" color.down="white" color.over="white" color.selectedStates="white" fontFamily="Verdana" left="5" right="10" textAlign="center" top="2" verticalAlign="middle"
+			 bottom="2" color="#686868" color.down="white" color.over="white" color.selectedStates="white" fontFamily="Verdana" left="5" right="10" textAlign="left" top="2" verticalAlign="middle"
 			 verticalCenter="1"
 			 maxDisplayedLines="1"/>
 
