--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
@@ -7,11 +7,37 @@
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 creationComplete="creationCompleteHandler()">
 
+	<fx:Metadata>
+		<![CDATA[ 
+		[HostComponent("net.vdombox.ide.modules.wysiwyg.interfaces.IEditor")]
+		]]>
+	</fx:Metadata>
+
 	<fx:Script>
 		<![CDATA[
 			private function creationCompleteHandler() : void
 			{
 				currentState = "wysiwyg";
+			}
+
+			override protected function commitProperties() : void
+			{
+				super.commitProperties();
+
+				if ( statusLabel )
+				{
+					if ( hostComponent.status == 1 )
+						statusLabel.text = "Saving...";
+					else if ( hostComponent.status == 2 )
+						statusLabel.text = "Saving OK";
+					else if ( hostComponent.status == 3 )
+						statusLabel.text = "Loading...";
+					else if ( hostComponent.status == 4 )
+						statusLabel.text = "Loading OK";
+					else
+						statusLabel.text = "";
+				}
+
 			}
 		]]>
 	</fx:Script>
@@ -38,6 +64,34 @@
 	<s:HGroup gap="0" height="20"
 			  left="1" right="1" top="1">
 
+		<s:HGroup enabled="false"
+				  verticalAlign="middle"
+				  includeIn="wysiwyg, wysiwygDisabled, normal, disabled">
+			<s:CheckBox label="Show Grid" x="10" y="10"/>
+
+			<s:Label text="X:"/>
+			<s:TextInput height="18" width="30" x="124" y="10"/>
+
+			<s:Label text="Y:"/>
+			<s:TextInput height="18" width="30" x="124" y="10"/>
+
+			<libcomponents:WorkAreaButton label="lock" width="46"/>
+
+			<s:CheckBox label="Snap to Grid" x="10" y="10"/>
+		</s:HGroup>
+
+		<s:HGroup includeIn="xml, xmlDisabled">
+			<libcomponents:WorkAreaButton id="saveXMLButton"
+										  height="20" label="{ resourceManager.getString( 'Wysiwyg_General', 'work_area_xml_save_button_label' ) }"/>
+
+			<mx:Spacer width="20"/>
+
+			<s:Label id="statusLabel"
+					 height="20"
+					 color="gray" verticalAlign="middle"/>
+
+		</s:HGroup>
+
 		<mx:Spacer width="100%"/>
 
 		<libcomponents:WorkAreaButton id="wysiwygButton"
@@ -61,7 +115,7 @@
 
 		<s:fill>
 			<s:SolidColor color="0xFFFFFF"
-						   alpha=".2"/>
+						  alpha=".2"/>
 		</s:fill>
 
 	</s:Rect>
