--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
@@ -66,7 +66,7 @@
 			includeIn="locked">
 
 		<s:fill>
-			<s:SolidColor color="white"/>
+			<s:SolidColor color="gray"/>
 		</s:fill>
 	</s:Rect>
 
