--- a/IDE/v.01/vdom/controls/resourceBrowser/ResourceBrowserButton.mxml
+++ b/IDE/v.01/vdom/controls/resourceBrowser/ResourceBrowserButton.mxml
@@ -10,7 +10,7 @@
 			import mx.managers.PopUpManager;
 			import vdom.events.ResourceBrowserEvent;
 
-			private const regResource : RegExp = /^#Res\(([-a-zA-Z0-9]*)\)/;
+			private const regResource : RegExp = /^(?:#Res\(([-a-zA-Z0-9]*)\))|(?:([-a-zA-Z0-9]*))/;
 			private var _value : String = "";
 			private var _title : String = "";
 
@@ -32,11 +32,11 @@
 
 			public function set value( attrValue : String ) : void
 			{
-				_value = attrValue;
-				var matchResult : Array = _value.match( regResource );
+				var matchResult : Array = attrValue.match( regResource );
 				if ( matchResult )
 				{
-					_labelText = "Resource ID: " + matchResult[ 1 ];
+					_labelText = matchResult[ 1 ];
+					_value = "#Res("+_labelText+")";
 					clearBtnEnabled = true;
 				}
 				else
