git-svn-id: http://svn.vdombox.ru/flextools/trunk@6362 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Events.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Events.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:OEComponents="OEComponents.*" xmlns:ns="net.vdombox.help_editor.model.*">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:OEComponents="OEComponents.*" xmlns:ns="net.vdombox.object_editor.model.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -23,7 +23,7 @@
 //				arLibraries.removeAll();
 //				libCode.text = "";
 				
-				_data =  xml.E2vdom.Events.Userinterfaceevents[0];
+				_data =  net.vdombox.object_editor.view.essence.Events.Userinterfaceevents[0];
 				if (!_data) _data = new XML("<Userinterfaceevents/>");
 				
 				for each(var child:XML in _data.children())
